--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,31 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#006400" /> <!-- Couleur de thème verte pour un lien avec le bois -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Plateforme d'optimisation des coupes de bois utilisant l'intelligence artificielle"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>OptiCoupe Copy</title> <!-- Titre modifié -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Inclusion des polices ou des CSS supplémentaires si nécessaire -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" /> <!-- Fichier CSS principal -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
+    <div id="root"></div> <!-- Élément racine pour React -->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Commentaire expliquant le but de la plateforme -->
+    <!-- Cette plateforme utilise React pour l'optimisation des coupes de panneaux de bois.
+         Elle fournira des outils de visualisation et d'analyse pour maximiser l'utilisation des panneaux
+         et minimiser les déchets. -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Script de build généré par React (injecté lors du build) -->
   </body>
 </html>
