--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" /> <!-- Fichier CSS principal -->
   </head>
   <body>
-    <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
+    <noscript>Activer JavaScript pour utiliser cette application.</noscript>
     <div id="root"></div> <!-- Élément racine pour React -->
 
     <!-- Commentaire expliquant le but de la plateforme -->
