--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>OptiCoupe Copy</title> <!-- Titre modifié -->
+    <title>OptiCoupe1 Copy</title> <!-- Titre modifié -->
 
     <!-- Inclusion des polices ou des CSS supplémentaires si nécessaire -->
     <link
